src/objects/copado__Git_Repository__c.object
<CustomObject>
    <description>Connection to a git repository like github.com or bitbuckets.org</description>
    <fields>
        <fullName>IsBackupsOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Git Repository for metadata backups only.</description>
        <inlineHelpText>Backups only repositories are not allowed to have Commits, only Snapshots.</inlineHelpText>
        <label>Backups Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WebURI__c</fullName>
        <description>Base URL to access this repository via HTTP.  Used to make it simple to review commits</description>
        <label>WebURI</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>copado__Branch_Base_URL__c</fullName>
        <description>This field enables Copado to create a link to the Git branches&apos; information on your provider&apos;s end.</description>
        <inlineHelpText>Base URL of your Repository branches, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/tree/</inlineHelpText>
        <label>Branch Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Commit_Base_URL__c</fullName>
        <description>This field enables Copado to create a link to the Git commits&apos; information on your provider&apos;s end.</description>
        <inlineHelpText>Base URL of your Repository commits, e.g.: https://github.com/[COMPANY]/[REPOSITORY]/commit/</inlineHelpText>
        <label>Commit Base URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__URI__c</fullName>
        <label>URI</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Git Repository</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Username__c</columns>
        <columns>copado__URI__c</columns>
        <columns>WebURI__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Git Repository Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Git Repositories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>